parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABS
    ARRAY
    AUTO
    CONCAT
    CONTINUE
    DIR
    ENUM
    EXIT
    EXTERN
    MIENTRAS
    PARAM
    PCARACTER
    PDECIMAL
    PDOUBLE
    PILA
    PSTRING
    REGISTER
    SIZEOF
    TEMP
    UNSET
    VAL

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     metodos -> metodos definicion_metodo
Rule 3     metodos -> definicion_metodo
Rule 4     instrucciones -> instrucciones instruccion
Rule 5     instrucciones -> instruccion
Rule 6     instruccion -> imprimir_instr
Rule 7     instruccion -> definicion_variable
Rule 8     instruccion -> asignacion_variable
Rule 9     instruccion -> definicion_metodo
Rule 10    instruccion -> definicion_struct
Rule 11    instruccion -> return
Rule 12    instruccion -> if_instr
Rule 13    instruccion -> switch
Rule 14    instruccion -> break
Rule 15    instruccion -> while
Rule 16    instruccion -> aumento
Rule 17    instruccion -> decremento
Rule 18    instruccion -> dowhile
Rule 19    instruccion -> for
Rule 20    instruccion -> etiqueta
Rule 21    instruccion -> goto
Rule 22    instruccion -> llamada_funcion
Rule 23    etiqueta -> ID DOSPUNTOS
Rule 24    return -> RETURN expresion_numerica
Rule 25    definicion_struct -> STRUCT ID LLAVIZQ instrucciones LLAVDER PTCOMA
Rule 26    definicion_metodo -> tipo ID PARIZQ PARDER LLAVIZQ instrucciones LLAVDER
Rule 27    definicion_metodo -> tipo ID PARIZQ parametros PARDER LLAVIZQ instrucciones LLAVDER
Rule 28    parametros -> parametros COMA parametro
Rule 29    parametros -> parametro
Rule 30    parametro -> tipo ID
Rule 31    llamada_funcion -> ID PARIZQ PARDER PTCOMA
Rule 32    llamada_funcion -> ID PARIZQ lista_ids PARDER PTCOMA
Rule 33    imprimir_instr -> IMPRIMIR PARIZQ expresion_numerica PARDER PTCOMA
Rule 34    imprimir_instr -> IMPRIMIR PARIZQ expresion_numerica COMA lista_ids PARDER PTCOMA
Rule 35    asignacion_variable -> ID IGUAL expresion_numerica PTCOMA
Rule 36    definicion_variable -> tipo lista_ids IGUAL expresion_numerica PTCOMA
Rule 37    definicion_variable -> tipo ID dimensiones IGUAL LLAVIZQ lista_ids LLAVDER PTCOMA
Rule 38    expresion_numerica -> ID dimensiones
Rule 39    dimensiones -> dimensiones dimension
Rule 40    dimensiones -> dimension
Rule 41    dimension -> CORIZQ expresion_numerica CORDER
Rule 42    definicion_variable -> tipo lista_ids PTCOMA
Rule 43    if_instr -> IF PARIZQ expresion_numerica PARDER LLAVIZQ instrucciones LLAVDER
Rule 44    if_instr -> IF PARIZQ expresion_numerica PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER
Rule 45    if_instr -> IF PARIZQ expresion_numerica PARDER LLAVIZQ instrucciones LLAVDER ELSE if_instr
Rule 46    goto -> GOTO ID PTCOMA
Rule 47    switch -> SWITCH PARIZQ expresion_numerica PARDER LLAVIZQ casos LLAVDER
Rule 48    casos -> casos caso
Rule 49    casos -> caso
Rule 50    caso -> CASE expresion_numerica DOSPUNTOS instrucciones
Rule 51    caso -> DEFAULT DOSPUNTOS instrucciones
Rule 52    while -> WHILE PARIZQ expresion_numerica PARDER LLAVIZQ instrucciones LLAVDER
Rule 53    dowhile -> DO LLAVIZQ instrucciones LLAVDER WHILE PARIZQ expresion_numerica PARDER PTCOMA
Rule 54    for -> FOR PARIZQ asignacion_variable expresion_numerica PTCOMA aumento_f PARDER LLAVIZQ instrucciones LLAVDER
Rule 55    for -> FOR PARIZQ asignacion_variable expresion_numerica PTCOMA decremento_f PARDER LLAVIZQ instrucciones LLAVDER
Rule 56    tipo -> INT
Rule 57    tipo -> FLOAT
Rule 58    tipo -> DOUBLE
Rule 59    tipo -> CHAR
Rule 60    tipo -> VOID
Rule 61    lista_ids -> lista_ids COMA expresion_numerica
Rule 62    lista_ids -> expresion_numerica
Rule 63    lista_ids -> expresion_numerica CORIZQ CORDER
Rule 64    expresion_numerica -> expresion_numerica MAS expresion_numerica
Rule 65    expresion_numerica -> expresion_numerica MENOS expresion_numerica
Rule 66    expresion_numerica -> expresion_numerica POR expresion_numerica
Rule 67    expresion_numerica -> expresion_numerica DIVIDIDO expresion_numerica
Rule 68    expresion_numerica -> expresion_numerica RESIDUO expresion_numerica
Rule 69    expresion_numerica -> expresion_numerica IGUALQUE expresion_numerica
Rule 70    expresion_numerica -> expresion_numerica NIGUALQUE expresion_numerica
Rule 71    expresion_numerica -> expresion_numerica MAYIGUAL expresion_numerica
Rule 72    expresion_numerica -> expresion_numerica MENIGUAL expresion_numerica
Rule 73    expresion_numerica -> expresion_numerica MAYQUE expresion_numerica
Rule 74    expresion_numerica -> expresion_numerica MENQUE expresion_numerica
Rule 75    expresion_numerica -> expresion_numerica AND expresion_numerica
Rule 76    expresion_numerica -> expresion_numerica OR expresion_numerica
Rule 77    expresion_numerica -> expresion_numerica XOR expresion_numerica
Rule 78    expresion_numerica -> expresion_numerica ANDBIT expresion_numerica
Rule 79    expresion_numerica -> expresion_numerica ORBIT expresion_numerica
Rule 80    expresion_numerica -> expresion_numerica XORBIT expresion_numerica
Rule 81    expresion_numerica -> expresion_numerica MAYORBIT expresion_numerica
Rule 82    expresion_numerica -> expresion_numerica MENORBIT expresion_numerica
Rule 83    expresion_numerica -> NOT expresion_numerica
Rule 84    expresion_numerica -> NOTBIT expresion_numerica
Rule 85    expresion_numerica -> PARIZQ INT PARDER expresion_numerica
Rule 86    expresion_numerica -> PARIZQ FLOAT PARDER expresion_numerica
Rule 87    expresion_numerica -> PARIZQ CHAR PARDER expresion_numerica
Rule 88    expresion_numerica -> MENOS expresion_numerica
Rule 89    expresion_numerica -> PARIZQ expresion_numerica PARDER
Rule 90    expresion_numerica -> ENTERO
Rule 91    expresion_numerica -> DECIMAL
Rule 92    expresion_numerica -> ID
Rule 93    expresion_numerica -> CADENA
Rule 94    expresion_numerica -> CARACTER
Rule 95    expresion_numerica -> PUNTERO ID
Rule 96    expresion_numerica -> POR ID
Rule 97    expresion_numerica -> POR POR ID
Rule 98    break -> BREAK PTCOMA
Rule 99    aumento -> MAS MAS expresion_numerica PTCOMA
Rule 100   aumento_f -> MAS MAS expresion_numerica
Rule 101   aumento -> expresion_numerica MAS MAS PTCOMA
Rule 102   decremento -> MENOSMENOS expresion_numerica PTCOMA
Rule 103   decremento_f -> MENOSMENOS expresion_numerica
Rule 104   decremento -> expresion_numerica MENOSMENOS PTCOMA

Terminals, with rules where they appear

ABS                  : 
AND                  : 75
ANDBIT               : 78
ARRAY                : 
AUTO                 : 
BREAK                : 98
CADENA               : 93
CARACTER             : 94
CASE                 : 50
CHAR                 : 59 87
COMA                 : 28 34 61
CONCAT               : 
CONTINUE             : 
CORDER               : 41 63
CORIZQ               : 41 63
DECIMAL              : 91
DEFAULT              : 51
DIR                  : 
DIVIDIDO             : 67
DO                   : 53
DOSPUNTOS            : 23 50 51
DOUBLE               : 58
ELSE                 : 44 45
ENTERO               : 90
ENUM                 : 
EXIT                 : 
EXTERN               : 
FLOAT                : 57 86
FOR                  : 54 55
GOTO                 : 46
ID                   : 23 25 26 27 30 31 32 35 37 38 46 92 95 96 97
IF                   : 43 44 45
IGUAL                : 35 36 37
IGUALQUE             : 69
IMPRIMIR             : 33 34
INT                  : 56 85
LLAVDER              : 25 26 27 37 43 44 44 45 47 52 53 54 55
LLAVIZQ              : 25 26 27 37 43 44 44 45 47 52 53 54 55
MAS                  : 64 99 99 100 100 101 101
MAYIGUAL             : 71
MAYORBIT             : 81
MAYQUE               : 73
MENIGUAL             : 72
MENORBIT             : 82
MENOS                : 65 88
MENOSMENOS           : 102 103 104
MENQUE               : 74
MIENTRAS             : 
NIGUALQUE            : 70
NOT                  : 83
NOTBIT               : 84
OR                   : 76
ORBIT                : 79
PARAM                : 
PARDER               : 26 27 31 32 33 34 43 44 45 47 52 53 54 55 85 86 87 89
PARIZQ               : 26 27 31 32 33 34 43 44 45 47 52 53 54 55 85 86 87 89
PCARACTER            : 
PDECIMAL             : 
PDOUBLE              : 
PILA                 : 
POR                  : 66 96 97 97
PSTRING              : 
PTCOMA               : 25 31 32 33 34 35 36 37 42 46 53 54 55 98 99 101 102 104
PUNTERO              : 95
REGISTER             : 
RESIDUO              : 68
RETURN               : 24
SIZEOF               : 
STRUCT               : 25
SWITCH               : 47
TEMP                 : 
UNSET                : 
VAL                  : 
VOID                 : 60
WHILE                : 52 53
XOR                  : 77
XORBIT               : 80
error                : 

Nonterminals, with rules where they appear

asignacion_variable  : 8 54 55
aumento              : 16
aumento_f            : 54
break                : 14
caso                 : 48 49
casos                : 47 48
decremento           : 17
decremento_f         : 55
definicion_metodo    : 2 3 9
definicion_struct    : 10
definicion_variable  : 7
dimension            : 39 40
dimensiones          : 37 38 39
dowhile              : 18
etiqueta             : 20
expresion_numerica   : 24 33 34 35 36 41 43 44 45 47 50 52 53 54 55 61 62 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 84 85 86 87 88 89 99 100 101 102 103 104
for                  : 19
goto                 : 21
if_instr             : 12 45
imprimir_instr       : 6
init                 : 0
instruccion          : 4 5
instrucciones        : 1 4 25 26 27 43 44 44 45 50 51 52 53 54 55
lista_ids            : 32 34 36 37 42 61
llamada_funcion      : 22
metodos              : 2
parametro            : 28 29
parametros           : 27 28
return               : 11
switch               : 13
tipo                 : 26 27 30 36 37 42
while                : 15

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (4) instrucciones -> . instrucciones instruccion
    (5) instrucciones -> . instruccion
    (6) instruccion -> . imprimir_instr
    (7) instruccion -> . definicion_variable
    (8) instruccion -> . asignacion_variable
    (9) instruccion -> . definicion_metodo
    (10) instruccion -> . definicion_struct
    (11) instruccion -> . return
    (12) instruccion -> . if_instr
    (13) instruccion -> . switch
    (14) instruccion -> . break
    (15) instruccion -> . while
    (16) instruccion -> . aumento
    (17) instruccion -> . decremento
    (18) instruccion -> . dowhile
    (19) instruccion -> . for
    (20) instruccion -> . etiqueta
    (21) instruccion -> . goto
    (22) instruccion -> . llamada_funcion
    (33) imprimir_instr -> . IMPRIMIR PARIZQ expresion_numerica PARDER PTCOMA
    (34) imprimir_instr -> . IMPRIMIR PARIZQ expresion_numerica COMA lista_ids PARDER PTCOMA
    (36) definicion_variable -> . tipo lista_ids IGUAL expresion_numerica PTCOMA
    (37) definicion_variable -> . tipo ID dimensiones IGUAL LLAVIZQ lista_ids LLAVDER PTCOMA
    (42) definicion_variable -> . tipo lista_ids PTCOMA
    (35) asignacion_variable -> . ID IGUAL expresion_numerica PTCOMA
    (26) definicion_metodo -> . tipo ID PARIZQ PARDER LLAVIZQ instrucciones LLAVDER
    (27) definicion_metodo -> . tipo ID PARIZQ parametros PARDER LLAVIZQ instrucciones LLAVDER
    (25) definicion_struct -> . STRUCT ID LLAVIZQ instrucciones LLAVDER PTCOMA
    (24) return -> . RETURN expresion_numerica
    (43) if_instr -> . IF PARIZQ expresion_numerica PARDER LLAVIZQ instrucciones LLAVDER
    (44) if_instr -> . IF PARIZQ expresion_numerica PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER
    (45) if_instr -> . IF PARIZQ expresion_numerica PARDER LLAVIZQ instrucciones LLAVDER ELSE if_instr
    (47) switch -> . SWITCH PARIZQ expresion_numerica PARDER LLAVIZQ casos LLAVDER
    (98) break -> . BREAK PTCOMA
    (52) while -> . WHILE PARIZQ expresion_numerica PARDER LLAVIZQ instrucciones LLAVDER
    (99) aumento -> . MAS MAS expresion_numerica PTCOMA
    (101) aumento -> . expresion_numerica MAS MAS PTCOMA
    (102) decremento -> . MENOSMENOS expresion_numerica PTCOMA
    (104) decremento -> . expresion_numerica MENOSMENOS PTCOMA
    (53) dowhile -> . DO LLAVIZQ instrucciones LLAVDER WHILE PARIZQ expresion_numerica PARDER PTCOMA
    (54) for -> . FOR PARIZQ asignacion_variable expresion_numerica PTCOMA aumento_f PARDER LLAVIZQ instrucciones LLAVDER
    (55) for -> . FOR PARIZQ asignacion_variable expresion_numerica PTCOMA decremento_f PARDER LLAVIZQ instrucciones LLAVDER
    (23) etiqueta -> . ID DOSPUNTOS
    (46) goto -> . GOTO ID PTCOMA
    (31) llamada_funcion -> . ID PARIZQ PARDER PTCOMA
    (32) llamada_funcion -> . ID PARIZQ lista_ids PARDER PTCOMA
    (56) tipo -> . INT
    (57) tipo -> . FLOAT
    (58) tipo -> . DOUBLE
    (59) tipo -> . CHAR
    (60) tipo -> . VOID
    (38) expresion_numerica -> . ID dimensiones
    (64) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (65) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (66) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (67) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (68) expresion_numerica -> . expresion_numerica RESIDUO expresion_numerica
    (69) expresion_numerica -> . expresion_numerica IGUALQUE expresion_numerica
    (70) expresion_numerica -> . expresion_numerica NIGUALQUE expresion_numerica
    (71) expresion_numerica -> . expresion_numerica MAYIGUAL expresion_numerica
    (72) expresion_numerica -> . expresion_numerica MENIGUAL expresion_numerica
    (73) expresion_numerica -> . expresion_numerica MAYQUE expresion_numerica
    (74) expresion_numerica -> . expresion_numerica MENQUE expresion_numerica
    (75) expresion_numerica -> . expresion_numerica AND expresion_numerica
    (76) expresion_numerica -> . expresion_numerica OR expresion_numerica
    (77) expresion_numerica -> . expresion_numerica XOR expresion_numerica
    (78) expresion_numerica -> . expresion_numerica ANDBIT expresion_numerica
    (79) expresion_numerica -> . expresion_numerica ORBIT expresion_numerica
    (80) expresion_numerica -> . expresion_numerica XORBIT expresion_numerica
    (81) expresion_numerica -> . expresion_numerica MAYORBIT expresion_numerica
    (82) expresion_numerica -> . expresion_numerica MENORBIT expresion_numerica
    (83) expresion_numerica -> . NOT expresion_numerica
    (84) expresion_numerica -> . NOTBIT expresion_numerica
    (85) expresion_numerica -> . PARIZQ INT PARDER expresion_numerica
    (86) expresion_numerica -> . PARIZQ FLOAT PARDER expresion_numerica
    (87) expresion_numerica -> . PARIZQ CHAR PARDER expresion_numerica
    (88) expresion_numerica -> . MENOS expresion_numerica
    (89) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (90) expresion_numerica -> . ENTERO
    (91) expresion_numerica -> . DECIMAL
    (92) expresion_numerica -> . ID
    (93) expresion_numerica -> . CADENA
    (94) expresion_numerica -> . CARACTER
    (95) expresion_numerica -> . PUNTERO ID
    (96) expresion_numerica -> . POR ID
    (97) expresion_numerica -> . POR POR ID

    IMPRIMIR        shift and go to state 21
    ID              shift and go to state 25
    STRUCT          shift and go to state 26
    RETURN          shift and go to state 27
    IF              shift and go to state 28
    SWITCH          shift and go to state 29
    BREAK           shift and go to state 30
    WHILE           shift and go to state 31
    MAS             shift and go to state 32
    MENOSMENOS      shift and go to state 33
    DO              shift and go to state 34
    FOR             shift and go to state 35
    GOTO            shift and go to state 36
    INT             shift and go to state 37
    FLOAT           shift and go to state 38
    DOUBLE          shift and go to state 39
    CHAR            shift and go to state 40
    VOID            shift and go to state 41
    NOT             shift and go to state 44
    NOTBIT          shift and go to state 45
    PARIZQ          shift and go to state 22
    MENOS           shift and go to state 42
    ENTERO          shift and go to state 46
    DECIMAL         shift and go to state 47
    CADENA          shift and go to state 48
    CARACTER        shift and go to state 49
    PUNTERO         shift and go to state 50
    POR             shift and go to state 43

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    definicion_variable            shift and go to state 5
    asignacion_variable            shift and go to state 6
    definicion_metodo              shift and go to state 7
    definicion_struct              shift and go to state 8
    return                         shift and go to state 9
    if_instr                       shift and go to state 10
    switch                         shift and go to state 11
    break                          shift and go to state 12
    while                          shift and go to state 13
    aumento                        shift and go to state 14
    decremento                     shift and go to state 15
    dowhile                        shift and go to state 16
    for                            shift and go to state 17
    etiqueta                       shift and go to state 18
    goto                           shift and go to state 19
    llamada_funcion                shift and go to state 20
    expresion_numerica             shift and go to state 23
    tipo                           shift and go to state 24

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (4) instrucciones -> instrucciones . instruccion
    (6) instruccion -> . imprimir_instr
    (7) instruccion -> . definicion_variable
    (8) instruccion -> . asignacion_variable
    (9) instruccion -> . definicion_metodo
    (10) instruccion -> . definicion_struct
    (11) instruccion -> . return
    (12) instruccion -> . if_instr
    (13) instruccion -> . switch
    (14) instruccion -> . break
    (15) instruccion -> . while
    (16) instruccion -> . aumento
    (17) instruccion -> . decremento
    (18) instruccion -> . dowhile
    (19) instruccion -> . for
    (20) instruccion -> . etiqueta
    (21) instruccion -> . goto
    (22) instruccion -> . llamada_funcion
    (33) imprimir_instr -> . IMPRIMIR PARIZQ expresion_numerica PARDER PTCOMA
    (34) imprimir_instr -> . IMPRIMIR PARIZQ expresion_numerica COMA lista_ids PARDER PTCOMA
    (36) definicion_variable -> . tipo lista_ids IGUAL expresion_numerica PTCOMA
    (37) definicion_variable -> . tipo ID dimensiones IGUAL LLAVIZQ lista_ids LLAVDER PTCOMA
    (42) definicion_variable -> . tipo lista_ids PTCOMA
    (35) asignacion_variable -> . ID IGUAL expresion_numerica PTCOMA
    (26) definicion_metodo -> . tipo ID PARIZQ PARDER LLAVIZQ instrucciones LLAVDER
    (27) definicion_metodo -> . tipo ID PARIZQ parametros PARDER LLAVIZQ instrucciones LLAVDER
    (25) definicion_struct -> . STRUCT ID LLAVIZQ instrucciones LLAVDER PTCOMA
    (24) return -> . RETURN expresion_numerica
    (43) if_instr -> . IF PARIZQ expresion_numerica PARDER LLAVIZQ instrucciones LLAVDER
    (44) if_instr -> . IF PARIZQ expresion_numerica PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER
    (45) if_instr -> . IF PARIZQ expresion_numerica PARDER LLAVIZQ instrucciones LLAVDER ELSE if_instr
    (47) switch -> . SWITCH PARIZQ expresion_numerica PARDER LLAVIZQ casos LLAVDER
    (98) break -> . BREAK PTCOMA
    (52) while -> . WHILE PARIZQ expresion_numerica PARDER LLAVIZQ instrucciones LLAVDER
    (99) aumento -> . MAS MAS expresion_numerica PTCOMA
    (101) aumento -> . expresion_numerica MAS MAS PTCOMA
    (102) decremento -> . MENOSMENOS expresion_numerica PTCOMA
    (104) decremento -> . expresion_numerica MENOSMENOS PTCOMA
    (53) dowhile -> . DO LLAVIZQ instrucciones LLAVDER WHILE PARIZQ expresion_numerica PARDER PTCOMA
    (54) for -> . FOR PARIZQ asignacion_variable expresion_numerica PTCOMA aumento_f PARDER LLAVIZQ instrucciones LLAVDER
    (55) for -> . FOR PARIZQ asignacion_variable expresion_numerica PTCOMA decremento_f PARDER LLAVIZQ instrucciones LLAVDER
    (23) etiqueta -> . ID DOSPUNTOS
    (46) goto -> . GOTO ID PTCOMA
    (31) llamada_funcion -> . ID PARIZQ PARDER PTCOMA
    (32) llamada_funcion -> . ID PARIZQ lista_ids PARDER PTCOMA
    (56) tipo -> . INT
    (57) tipo -> . FLOAT
    (58) tipo -> . DOUBLE
    (59) tipo -> . CHAR
    (60) tipo -> . VOID
    (38) expresion_numerica -> . ID dimensiones
    (64) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (65) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (66) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (67) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (68) expresion_numerica -> . expresion_numerica RESIDUO expresion_numerica
    (69) expresion_numerica -> . expresion_numerica IGUALQUE expresion_numerica
    (70) expresion_numerica -> . expresion_numerica NIGUALQUE expresion_numerica
    (71) expresion_numerica -> . expresion_numerica MAYIGUAL expresion_numerica
    (72) expresion_numerica -> . expresion_numerica MENIGUAL expresion_numerica
    (73) expresion_numerica -> . expresion_numerica MAYQUE expresion_numerica
    (74) expresion_numerica -> . expresion_numerica MENQUE expresion_numerica
    (75) expresion_numerica -> . expresion_numerica AND expresion_numerica
    (76) expresion_numerica -> . expresion_numerica OR expresion_numerica
    (77) expresion_numerica -> . expresion_numerica XOR expresion_numerica
    (78) expresion_numerica -> . expresion_numerica ANDBIT expresion_numerica
    (79) expresion_numerica -> . expresion_numerica ORBIT expresion_numerica
    (80) expresion_numerica -> . expresion_numerica XORBIT expresion_numerica
    (81) expresion_numerica -> . expresion_numerica MAYORBIT expresion_numerica
    (82) expresion_numerica -> . expresion_numerica MENORBIT expresion_numerica
    (83) expresion_numerica -> . NOT expresion_numerica
    (84) expresion_numerica -> . NOTBIT expresion_numerica
    (85) expresion_numerica -> . PARIZQ INT PARDER expresion_numerica
    (86) expresion_numerica -> . PARIZQ FLOAT PARDER expresion_numerica
    (87) expresion_numerica -> . PARIZQ CHAR PARDER expresion_numerica
    (88) expresion_numerica -> . MENOS expresion_numerica
    (89) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (90) expresion_numerica -> . ENTERO
    (91) expresion_numerica -> . DECIMAL
    (92) expresion_numerica -> . ID
    (93) expresion_numerica -> . CADENA
    (94) expresion_numerica -> . CARACTER
    (95) expresion_numerica -> . PUNTERO ID
    (96) expresion_numerica -> . POR ID
    (97) expresion_numerica -> . POR POR ID

    $end            reduce using rule 1 (init -> instrucciones .)
    IMPRIMIR        shift and go to state 21
    ID              shift and go to state 25
    STRUCT          shift and go to state 26
    RETURN          shift and go to state 27
    IF              shift and go to state 28
    SWITCH          shift and go to state 29
    BREAK           shift and go to state 30
    WHILE           shift and go to state 31
    MAS             shift and go to state 32
    MENOSMENOS      shift and go to state 33
    DO              shift and go to state 34
    FOR             shift and go to state 35
    GOTO            shift and go to state 36
    INT             shift and go to state 37
    FLOAT           shift and go to state 38
    DOUBLE          shift and go to state 39
    CHAR            shift and go to state 40
    VOID            shift and go to state 41
    NOT             shift and go to state 44
    NOTBIT          shift and go to state 45
    PARIZQ          shift and go to state 22
    MENOS           shift and go to state 42
    ENTERO          shift and go to state 46
    DECIMAL         shift and go to state 47
    CADENA          shift and go to state 48
    CARACTER        shift and go to state 49
    PUNTERO         shift and go to state 50
    POR             shift and go to state 43

    instruccion                    shift and go to state 51
    imprimir_instr                 shift and go to state 4
    definicion_variable            shift and go to state 5
    asignacion_variable            shift and go to state 6
    definicion_metodo              shift and go to state 7
    definicion_struct              shift and go to state 8
    return                         shift and go to state 9
    if_instr                       shift and go to state 10
    switch                         shift and go to state 11
    break                          shift and go to state 12
    while                          shift and go to state 13
    aumento                        shift and go to state 14
    decremento                     shift and go to state 15
    dowhile                        shift and go to state 16
    for                            shift and go to state 17
    etiqueta                       shift and go to state 18
    goto                           shift and go to state 19
    llamada_funcion                shift and go to state 20
    expresion_numerica             shift and go to state 23
    tipo                           shift and go to state 24

state 3

    (5) instrucciones -> instruccion .

    IMPRIMIR        reduce using rule 5 (instrucciones -> instruccion .)
    ID              reduce using rule 5 (instrucciones -> instruccion .)
    STRUCT          reduce using rule 5 (instrucciones -> instruccion .)
    RETURN          reduce using rule 5 (instrucciones -> instruccion .)
    IF              reduce using rule 5 (instrucciones -> instruccion .)
    SWITCH          reduce using rule 5 (instrucciones -> instruccion .)
    BREAK           reduce using rule 5 (instrucciones -> instruccion .)
    WHILE           reduce using rule 5 (instrucciones -> instruccion .)
    MAS             reduce using rule 5 (instrucciones -> instruccion .)
    MENOSMENOS      reduce using rule 5 (instrucciones -> instruccion .)
    DO              reduce using rule 5 (instrucciones -> instruccion .)
    FOR             reduce using rule 5 (instrucciones -> instruccion .)
    GOTO            reduce using rule 5 (instrucciones -> instruccion .)
    INT             reduce using rule 5 (instrucciones -> instruccion .)
    FLOAT           reduce using rule 5 (instrucciones -> instruccion .)
    DOUBLE          reduce using rule 5 (instrucciones -> instruccion .)
    CHAR            reduce using rule 5 (instrucciones -> instruccion .)
    VOID            reduce using rule 5 (instrucciones -> instruccion .)
    NOT             reduce using rule 5 (instrucciones -> instruccion .)
    NOTBIT          reduce using rule 5 (instrucciones -> instruccion .)
    PARIZQ          reduce using rule 5 (instrucciones -> instruccion .)
    MENOS           reduce using rule 5 (instrucciones -> instruccion .)
    ENTERO          reduce using rule 5 (instrucciones -> instruccion .)
    DECIMAL         reduce using rule 5 (instrucciones -> instruccion .)
    CADENA          reduce using rule 5 (instrucciones -> instruccion .)
    CARACTER        reduce using rule 5 (instrucciones -> instruccion .)
    PUNTERO         reduce using rule 5 (instrucciones -> instruccion .)
    POR             reduce using rule 5 (instrucciones -> instruccion .)
    $end            reduce using rule 5 (instrucciones -> instruccion .)
    LLAVDER         reduce using rule 5 (instrucciones -> instruccion .)
    CASE            reduce using rule 5 (instrucciones -> instruccion .)
    DEFAULT         reduce using rule 5 (instrucciones -> instruccion .)


state 4

    (6) instruccion -> imprimir_instr .

    IMPRIMIR        reduce using rule 6 (instruccion -> imprimir_instr .)
    ID              reduce using rule 6 (instruccion -> imprimir_instr .)
    STRUCT          reduce using rule 6 (instruccion -> imprimir_instr .)
    RETURN          reduce using rule 6 (instruccion -> imprimir_instr .)
    IF              reduce using rule 6 (instruccion -> imprimir_instr .)
    SWITCH          reduce using rule 6 (instruccion -> imprimir_instr .)
    BREAK           reduce using rule 6 (instruccion -> imprimir_instr .)
    WHILE           reduce using rule 6 (instruccion -> imprimir_instr .)
    MAS             reduce using rule 6 (instruccion -> imprimir_instr .)
    MENOSMENOS      reduce using rule 6 (instruccion -> imprimir_instr .)
    DO              reduce using rule 6 (instruccion -> imprimir_instr .)
    FOR             reduce using rule 6 (instruccion -> imprimir_instr .)
    GOTO            reduce using rule 6 (instruccion -> imprimir_instr .)
    INT             reduce using rule 6 (instruccion -> imprimir_instr .)
    FLOAT           reduce using rule 6 (instruccion -> imprimir_instr .)
    DOUBLE          reduce using rule 6 (instruccion -> imprimir_instr .)
    CHAR            reduce using rule 6 (instruccion -> imprimir_instr .)
    VOID            reduce using rule 6 (instruccion -> imprimir_instr .)
    NOT             reduce using rule 6 (instruccion -> imprimir_instr .)
    NOTBIT          reduce using rule 6 (instruccion -> imprimir_instr .)
    PARIZQ          reduce using rule 6 (instruccion -> imprimir_instr .)
    MENOS           reduce using rule 6 (instruccion -> imprimir_instr .)
    ENTERO          reduce using rule 6 (instruccion -> imprimir_instr .)
    DECIMAL         reduce using rule 6 (instruccion -> imprimir_instr .)
    CADENA          reduce using rule 6 (instruccion -> imprimir_instr .)
    CARACTER        reduce using rule 6 (instruccion -> imprimir_instr .)
    PUNTERO         reduce using rule 6 (instruccion -> imprimir_instr .)
    POR             reduce using rule 6 (instruccion -> imprimir_instr .)
    $end            reduce using rule 6 (instruccion -> imprimir_instr .)
    LLAVDER         reduce using rule 6 (instruccion -> imprimir_instr .)
    CASE            reduce using rule 6 (instruccion -> imprimir_instr .)
    DEFAULT         reduce using rule 6 (instruccion -> imprimir_instr .)


state 5

    (7) instruccion -> definicion_variable .

    IMPRIMIR        reduce using rule 7 (instruccion -> definicion_variable .)
    ID              reduce using rule 7 (instruccion -> definicion_variable .)
    STRUCT          reduce using rule 7 (instruccion -> definicion_variable .)
    RETURN          reduce using rule 7 (instruccion -> definicion_variable .)
    IF              reduce using rule 7 (instruccion -> definicion_variable .)
    SWITCH          reduce using rule 7 (instruccion -> definicion_variable .)
    BREAK           reduce using rule 7 (instruccion -> definicion_variable .)
    WHILE           reduce using rule 7 (instruccion -> definicion_variable .)
    MAS             reduce using rule 7 (instruccion -> definicion_variable .)
    MENOSMENOS      reduce using rule 7 (instruccion -> definicion_variable .)
    DO              reduce using rule 7 (instruccion -> definicion_variable .)
    FOR             reduce using rule 7 (instruccion -> definicion_variable .)
    GOTO            reduce using rule 7 (instruccion -> definicion_variable .)
    INT             reduce using rule 7 (instruccion -> definicion_variable .)
    FLOAT           reduce using rule 7 (instruccion -> definicion_variable .)
    DOUBLE          reduce using rule 7 (instruccion -> definicion_variable .)
    CHAR            reduce using rule 7 (instruccion -> definicion_variable .)
    VOID            reduce using rule 7 (instruccion -> definicion_variable .)
    NOT             reduce using rule 7 (instruccion -> definicion_variable .)
    NOTBIT          reduce using rule 7 (instruccion -> definicion_variable .)
    PARIZQ          reduce using rule 7 (instruccion -> definicion_variable .)
    MENOS           reduce using rule 7 (instruccion -> definicion_variable .)
    ENTERO          reduce using rule 7 (instruccion -> definicion_variable .)
    DECIMAL         reduce using rule 7 (instruccion -> definicion_variable .)
    CADENA          reduce using rule 7 (instruccion -> definicion_variable .)
    CARACTER        reduce using rule 7 (instruccion -> definicion_variable .)
    PUNTERO         reduce using rule 7 (instruccion -> definicion_variable .)
    POR             reduce using rule 7 (instruccion -> definicion_variable .)
    $end            reduce using rule 7 (instruccion -> definicion_variable .)
    LLAVDER         reduce using rule 7 (instruccion -> definicion_variable .)
    CASE            reduce using rule 7 (instruccion -> definicion_variable .)
    DEFAULT         reduce using rule 7 (instruccion -> definicion_variable .)


state 6

    (8) instruccion -> asignacion_variable .

    IMPRIMIR        reduce using rule 8 (instruccion -> asignacion_variable .)
    ID              reduce using rule 8 (instruccion -> asignacion_variable .)
    STRUCT          reduce using rule 8 (instruccion -> asignacion_variable .)
    RETURN          reduce using rule 8 (instruccion -> asignacion_variable .)
    IF              reduce using rule 8 (instruccion -> asignacion_variable .)
    SWITCH          reduce using rule 8 (instruccion -> asignacion_variable .)
    BREAK           reduce using rule 8 (instruccion -> asignacion_variable .)
    WHILE           reduce using rule 8 (instruccion -> asignacion_variable .)
    MAS             reduce using rule 8 (instruccion -> asignacion_variable .)
